<resources>
    <string name="app_name">Солнечная система</string>
    <string name="milkywaygalaxy">Млечный путь</string>
    <string name="distance">54.6m km</string>
    <string name="gravity">3.711 m/ss</string>
    <string name="earth">Земля</string>
    <string name="textsplashscreen">Запуск...</string>
    <string name="solarsystem">Солнечная система</string>
    <string name="earth_info">Земля — третья планета от Солнца и единственный известный астрономический объект, на котором обитает и поддерживается жизнь. Около 29,2 % поверхности Земли — это суша, состоящая из континентов и островов. Остальные 70,8 % покрыты водой, в основном океанами, морями, заливы и другие водоемы с соленой водой, а также озера, реки и другие пресноводные водоемы, которые вместе составляют гидросферу. \n Большая часть полярных областей Земли покрыта льдом. Внешний слой Земли разделен на несколько жестких тектонических плит, которые мигрируют по поверхности в течение многих миллионов лет, в то время как его внутренняя часть остается активной с твердым железным внутренним ядром, жидким внешним ядром, которое генерирует магнитное поле Земли, и конвективной мантией, которая управляет тектоникой плит</string>
    <string name="info">Сведения</string>
    <string name="back">Назад</string>
    <string name="oh">Упс!</string>
    <string name="line1">ваша планета не обслуживаемая</string>
    <string name="line2">Илон что-то пытается.</string>
</resources>