<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".PlanetDetail">

    <ImageView
        android:contentDescription="@string/earth"
        android:layout_width="match_parent"
        android:layout_height="258dp"
        android:src="@drawable/bg_info"
        android:adjustViewBounds="true"
        android:scaleX="1"
        android:scaleY="1"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/planet_img_info"
            android:contentDescription="@string/earth"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_earth"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="-50dp"
                android:background="@color/secondary"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:paddingTop="60dp">
                    <TextView
                        android:id="@+id/title_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/earth"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/galaxy_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/milkywaygalaxy"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>
                    <View
                        android:layout_width="30dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="#03A9F4"
                        android:orientation="vertical"/>

                    <LinearLayout
                        android:id="@+id/indent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:orientation="horizontal"/>
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_distance"
                        android:contentDescription="@string/distance" />
                    <TextView
                        android:id="@+id/distance_info"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="2dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/distance"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        />
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="14dp"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_gravity"
                        android:contentDescription="@string/gravity" />
                    <TextView
                        android:id="@+id/gravity_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/gravity"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="14dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/info"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:letterSpacing="0.1"
                    android:textColor="@color/white" />
                <View
                    android:layout_width="30dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="#03A9F4"
                    android:orientation="vertical" />
                <TextView
                    android:id="@+id/overview_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-black"
                    android:letterSpacing="0.1"
                    android:lineSpacingExtra="1dp"
                    android:text="@string/earth_info"
                    android:textColor="@color/subtext"
                    android:textSize="13sp"/>
            </LinearLayout>


        </ScrollView>
        <TextView
            android:id="@+id/button_info"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_footer"
            android:elevation="10dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/back"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>